--- a/references.bib
+++ b/references.bib
@@ -1,17 +1,30 @@
 
-@article{wu_efficient_2024,
-	title = {Efficient and {Accurate} {PageRank} {Approximation} on {Large} {Graphs}},
-	volume = {2},
-	url = {https://dl.acm.org/doi/10.1145/3677132},
-	doi = {10.1145/3677132},
-	abstract = {PageRank is a commonly used measurement in a wide range of applications, including search engines, recommendation systems, and social networks. However, this measurement suffers from huge computational overhead, which cannot be scaled to large graphs. Although many approximate algorithms have been proposed for computing PageRank values, these algorithms are either (i) not efficient or (ii) not accurate. Worse still, some of them cannot provide estimated PageRank values for all the vertices. In this paper, we first propose the CUR-Trans algorithm, which can reduce the time complexity for computing PageRank values and has lower error bound than existing matrix approximation-based PageRank algorithms. Then, we develop the T 2-Approx algorithm to further reduce the time complexity for computing this measurement. Experiment results on three large-scale graphs show that both the CUR-Trans algorithm and the T 2-Approx algorithm achieve the lowest response time for computing PageRank values with the best accuracy (for the CUR-Trans algorithm) or the competitive accuracy (for the T 2-Approx algorithm). Besides, the two proposed algorithms are able to provide estimated PageRank values for all the vertices.},
-	number = {4},
-	urldate = {2025-03-24},
-	journal = {Proc. ACM Manag. Data},
-	author = {Wu, Siyue and Wu, Dingming and Quan, Junyi and Chan, Tsz Nam and Lu, Kezhong},
-	month = sep,
-	year = {2024},
-	pages = {196:1--196:26},
+@misc{noauthor_pdf_nodate,
+	title = {({PDF}) {A} {Parameterized} {Multisplitting} {Iterative} {Method} for {Solving} the {PageRank} {Problem}},
+	url = {https://www.researchgate.net/publication/371913713_A_Parameterized_Multisplitting_Iterative_Method_for_Solving_the_PageRank_Problem},
+	abstract = {PDF {\textbar} In this paper, a new multi parameter iterative algorithm is proposed to address the PageRank problem based on the multi-splitting iteration method... {\textbar} Find, read and cite all the research you need on ResearchGate},
+	language = {en},
+	urldate = {2025-03-28},
+	journal = {ResearchGate},
+	doi = {10.20944/preprints202306.1917.v1},
+}
+
+@article{anikin_efficient_2022,
+	title = {Efficient {Numerical} {Methods} to {Solve} {Sparse} {Linear} {Equations} with {Application} to {PageRank}},
+	volume = {37},
+	issn = {1055-6788, 1029-4937},
+	url = {http://arxiv.org/abs/1508.07607},
+	doi = {10.1080/10556788.2020.1858297},
+	abstract = {In this paper, we propose three methods to solve the PageRank problem for the transition matrices with both row and column sparsity. Our methods reduce the PageRank problem to the convex optimization problem over the simplex. The first algorithm is based on the gradient descent in L1 norm instead of the Euclidean one. The second algorithm extends the Frank-Wolfe to support sparse gradient updates. The third algorithm stands for the mirror descent algorithm with a randomized projection. We proof converges rates for these methods for sparse problems as well as numerical experiments support their effectiveness.},
+	number = {3},
+	urldate = {2025-03-28},
+	journal = {Optimization Methods and Software},
+	author = {Anikin, Anton and Gasnikov, Alexander and Gornov, Alexander and Kamzolov, Dmitry and Maximov, Yury and Nesterov, Yurii},
+	month = may,
+	year = {2022},
+	note = {arXiv:1508.07607 [math]},
+	keywords = {Mathematics - Optimization and Control},
+	pages = {907--935},
 }
 
 @article{bahmani_fast_2010,
@@ -43,7 +56,7 @@
 	pages = {25:1--25:26},
 }
 
-@article{wu_efficient_2024-1,
+@article{wu_efficient_2024,
 	title = {Efficient and {Accurate} {PageRank} {Approximation} on {Large} {Graphs}},
 	volume = {2},
 	url = {https://dl.acm.org/doi/10.1145/3677132},
