first upgrade after feedback

--- a/main.tex
+++ b/main.tex
@@ -13,9 +13,9 @@
 % Title Formatting
 \titleformat{\section}{\large\bfseries}{\thesection}{1em}{}
 
-\title{Optimized Memory Usage\\ for Distributed Graph Analytics}
+\title{Efficient Approximate PageRank on Apache Spark: \\ A Memory-Aware Approach}
 \author{Nina Michalek\\TU Berlin, DOS}
-\date{March 14, 2025}
+\date{March 29, 2025}
 
 \begin{document}
 
@@ -24,17 +24,22 @@
 \begin{multicols}{2}
 
 \section{Introduction}
-Today graphs are widely used to represent relationships between different entities for many applications such as social networks and website connections. Graphs are important for businesses to give users the best experience. With the everlasting increase of graph data one single machine is not sufficient to process big data sets of graphs therefor distributed graph processing systems are used to analyze the data stored in the graphs. Challenges arise with the processing of massive graphs including parallelism, load balancing, communication overhead and bandwidth \cite{meng_survey_2024}. 
+Today graphs are widely used to represent relationships between different entities for many applications such as social networks and website connections \cite{zhang_distributed_2021}. Therefor many specialized graph processing frameworks and algorithms have been introduced \cite{meng_survey_2024}. These systems can efficiently execute iterative algorithms such as PageRank \cite{gonzalez_graphx_nodate}. Apache Spark is an open-source distributed dataflow system that enables large-scale data processing \cite{shanahan_large_2015}. Built on top of Spark, GraphX is a graph processing framework that bridges the gap between system-level optimizations in specialized graph engines and the flexible dataflow operations available in general-purpose systems \cite{gonzalez_graphx_nodate}. However, recent research addresses the huge computational overhead in GraphX's PageRank algorithm and proposes approximate computing to reduce memory usage \cite{wu_efficient_2024}. 
+ 
 
 \section{Problem Description}
-In recent years a lot of graph processing frameworks and algorithms have been introduced. 
-PageRank is a widely used graph algorithm introduced by Google. Today it is used by many domains such as search engines, recommendation systems and social networks. The algorithm measures the importance of websites. However, research shows that most implementations of the algorithm are not efficient on large graphs as there is a huge computational overhead. That is because some algorithms still don't use approximate PageRank values. PageRank leverages iterative convergence to compute values for the nodes. In the original implementation it uses power iteration, which requires many passes over the graph to converge. This is computationally expensive. Another problem with real world graphs is that typically they are sparse and irregular. Some nodes have thousands of links and others just a few. PageRank implementations have a static nature and therefor don't adapt to fast changing environments such as social media. However, one of the major problems is the graph representation. Usually the graph is represented in a matrix, which requires up to $O(n^2)$ of memory.
+PageRank is a broadly used graph algorithm introduced by Google. Many domains such as search engines, recommendation systems and social networks leverage PageRank. The algorithm measures the importance of websites \cite{wu_efficient_2024}. However, research shows that most implementations of the algorithm are inefficient when applied to large scale graphs due to a huge computational overhead \cite{wu_efficient_2024}\cite{jayaram_dynamic_2024}\cite{yang_efficient_2024}. GraphX's PageRank comes with a static and dynamic version. Static PageRank runs for a fixed number of iterations, while dynamic PageRank runs until the ranks convergence \cite{noauthor_graphx_nodate}. In both implementations, power iteration is used to update values \cite{xin_graphx_2013}, which requires many passes over the graph, resulting in costly matrix operations.  A fundamental challenge lies in the graph representation itself. Typically, graphs are represented in matrices, which require up to $O(n^2)$ of memory in the worst case \cite{wu_efficient_2024}. As graph sizes grow rapidly, the transition matrix becomes a significant memory bottleneck, making it increasingly impractical to store or process the entire matrix directly. This motivates the development of more scalable approaches that avoid full matrix construction and instead rely on efficient approximations \cite{meng_survey_2024}.
+
+
+
+%In recent years many graph processing frameworks and algorithms have been introduced. 
+%PageRank is a widely used graph algorithm introduced by Google. Today it is used by many domains such as search engines, recommendation systems and social networks. The algorithm measures the importance of websites. However, research shows that most implementations of the algorithm are not efficient on large graphs as there is a huge computational overhead. That is because some algorithms still don't use approximate PageRank values. PageRank leverages iterative convergence to compute values for the nodes. In the original implementation it uses power iteration, which requires many passes over the graph to converge. This is computationally expensive. Another problem with real world graphs is that typically they are sparse and irregular. Some nodes have thousands of links and others just a few. PageRank implementations have a static nature and therefor don't adapt to fast changing environments such as social media. However, one of the major problems is the graph representation. Usually the graph is represented in a matrix, which requires up to $O(n^2)$ of memory \cite{wu_efficient_2024}\cite{langville_googles_nodate}.
 
 
 \section{State of the Art}
-Today there are many approximate PageRank algorithms that address the computational overhead in the original implementation. They use different approaches to achieve a better performance. Some of them use iteration algorithms that work by updating the ranks step by step until the values stop changing much. Although there is a threshold it takes a lot of time on large graphs. Monte Carlo based algorithms use random walks instead of iterations, which means they simulate someone randomly clicking links on the graph to estimate the importance of nodes. For large graphs and high accuracy the algorithm requires a lot of these walks. Another approach only takes samples instead of the whole graph. It estimates the importance of a node by it's local area. In general they are faster because they only use local information but the runtime depends on the size of the area. However, the PageRank can only be estimated for nodes inside that area so computing the PageRank for the whole graph is not possible with the sampling method. Finally matrix approximation PageRank algorithms simplify the adjacency matrix by reducing the rank of the matrix to make computations easier. This results in faster computing time but usually the construction of low-rank matrices is high. Recent research addresses the problem and further optimizes the performance and accuracy by sampling substructures in the graph that are informative about node importance. It further simplifies the computation by constructing a low-rank approximation of the PageRank matrix using representative columns and rows \cite{wu_efficient_2024}. 
+Today there are many approximate PageRank algorithms that address the computational overhead in the original implementation \cite{wu_efficient_2024}. They use different approaches to achieve a better performance. Some of them use iteration algorithms that work by updating the ranks step by step until the values stop changing much \cite{xie_parameterized_2023}\cite{anikin_efficient_2022}. Although there is a threshold it takes a lot of time on large graphs. Monte Carlo based algorithms use random walks instead of iterations, which means they simulate someone randomly clicking links on the graph to estimate the importance of nodes. For large graphs and high accuracy the algorithm requires a lot of these walks. Another approach only takes samples instead of the whole graph. It estimates the importance of a node by it's local area. In general they are faster because they only use local information but the runtime depends on the size of the area. However, the PageRank can only be estimated for nodes inside that area so computing the PageRank for the whole graph is not possible with the sampling method. Finally matrix approximation PageRank algorithms simplify the adjacency matrix by reducing the rank of the matrix to make computations easier. This results in faster computing time but usually the construction of low-rank matrices is high. Recent research addresses the problem and further optimizes the performance and accuracy by sampling substructures in the graph that are informative about node importance. It further simplifies the computation by constructing a low-rank approximation of the PageRank matrix using representative columns and rows \cite{wu_efficient_2024}. 
 
-Apache Spark introduced GraphX in 2014 which features a static and dynamic implementation of the PageRank algorithm. While GraphX was a huge step forward in distributed graph processing, it has several limitations. Since PageRank has been part of GraphX's first release and GraphX is not actively maintained it has not had any major updates since then. Therefor the PageRank algorithm in Spark is often not suitable for practical modern use cases. Especially, memory limitations arising from the use of power iterations and the use of RDD-based message passing become significant performance bottlenecks.
+Apache Spark introduced GraphX in 2014 which features a static and dynamic implementation of the PageRank algorithm. While GraphX was a huge step forward in distributed graph processing, it has several limitations. Since PageRank has been part of GraphX's first release and GraphX is not actively maintained it has not had any major updates since then. Therefor the PageRank algorithm in Spark is often not suitable for practical modern use cases. Especially, memory limitations arising from the use of power iterations and the use of RDD-based message passing become significant performance bottlenecks \cite{xin_graphx_2013}.
  
 
 \section{Approach}
@@ -47,7 +52,6 @@ Another algorithm that implements a more efficient version of PageRank is the CU
 
 After the implementation of a state of the art approach, the setup will be evaluated. As this paper tries to address the issue of inefficiency in GraphX's PageRank implementation, the primary evaluation metric will be memory usage. A tradeoff in accuracy is considered acceptable. The original GraphX's PageRank ialgorithm will serve as a baseline for comparison.
 
-%It leverages the low-rank approximation and the random walk
 
 
 \section{References}
