Updated whole proposal and used comments by supervisor

--- a/references.bib
+++ b/references.bib
@@ -1,4 +1,108 @@
 
+@article{zhu_gemini_nodate,
+	title = {Gemini: {A} {Computation}-{Centric} {Distributed} {Graph} {Processing} {System}},
+	abstract = {Traditionally distributed graph processing systems have largely focused on scalability through the optimizations of inter-node communication and load balance. However, they often deliver unsatisfactory overall processing efﬁciency compared with shared-memory graph computing frameworks. We analyze the behavior of several graph-parallel systems and ﬁnd that the added overhead for achieving scalability becomes a major limiting factor for efﬁciency, especially with modern multi-core processors and high-speed interconnection networks.},
+	language = {en},
+	author = {Zhu, Xiaowei and Chen, Wenguang and Zheng, Weimin and Ma, Xiaosong},
+}
+
+@misc{xin_graphx_2014,
+	title = {{GraphX}: {Unifying} {Data}-{Parallel} and {Graph}-{Parallel} {Analytics}},
+	shorttitle = {{GraphX}},
+	url = {http://arxiv.org/abs/1402.2394},
+	doi = {10.48550/arXiv.1402.2394},
+	abstract = {From social networks to language modeling, the growing scale and importance of graph data has driven the development of numerous new graph-parallel systems (e.g., Pregel, GraphLab). By restricting the computation that can be expressed and introducing new techniques to partition and distribute the graph, these systems can efficiently execute iterative graph algorithms orders of magnitude faster than more general data-parallel systems. However, the same restrictions that enable the performance gains also make it difficult to express many of the important stages in a typical graph-analytics pipeline: constructing the graph, modifying its structure, or expressing computation that spans multiple graphs. As a consequence, existing graph analytics pipelines compose graph-parallel and data-parallel systems using external storage systems, leading to extensive data movement and complicated programming model. To address these challenges we introduce GraphX, a distributed graph computation framework that unifies graph-parallel and data-parallel computation. GraphX provides a small, core set of graph-parallel operators expressive enough to implement the Pregel and PowerGraph abstractions, yet simple enough to be cast in relational algebra. GraphX uses a collection of query optimization techniques such as automatic join rewrites to efficiently implement these graph-parallel operators. We evaluate GraphX on real-world graphs and workloads and demonstrate that GraphX achieves comparable performance as specialized graph computation systems, while outperforming them in end-to-end graph pipelines. Moreover, GraphX achieves a balance between expressiveness, performance, and ease of use.},
+	urldate = {2025-04-04},
+	publisher = {arXiv},
+	author = {Xin, Reynold S. and Crankshaw, Daniel and Dave, Ankur and Gonzalez, Joseph E. and Franklin, Michael J. and Stoica, Ion},
+	month = feb,
+	year = {2014},
+	note = {arXiv:1402.2394 [cs]},
+	keywords = {Computer Science - Databases},
+}
+
+@misc{noauthor_fast_nodate,
+	title = {Fast {PageRank} approximation by adaptive sampling {\textbar} {Knowledge} and {Information} {Systems}},
+	url = {https://dl.acm.org/doi/10.1007/s10115-013-0691-1},
+	urldate = {2025-04-04},
+}
+
+@misc{noauthor_local_nodate,
+	title = {Local approximation of pagerank and reverse pagerank {\textbar} {Proceedings} of the 17th {ACM} conference on {Information} and knowledge management},
+	url = {https://dl.acm.org/doi/10.1145/1458082.1458122},
+	urldate = {2025-04-04},
+}
+
+@inproceedings{wu_approxrank_2009,
+	title = {{ApproxRank}: {Estimating} {Rank} for a {Subgraph}},
+	shorttitle = {{ApproxRank}},
+	url = {https://ieeexplore.ieee.org/document/4812391},
+	doi = {10.1109/ICDE.2009.108},
+	abstract = {Customized semantic query answering, personalized search, focused crawlers and localized search engines frequently focus on ranking the pages contained within a subgraph of the global Web graph. The challenge for these applications is to compute PageRank-style scores efficiently on the subgraph, i.e., the ranking must reflect the global link structure of the Web graph but it must do so without paying the high overhead associated with a global computation. We propose a framework of an exact solution and an approximate solution for computing ranking on a subgraph. The IdealRank algorithm is an exact solution with the assumption that the scores of external pages are known. We prove that the IdealRank scores for pages in the subgraph converge. Since the PageRank-style scores of external pages may not typically be available, we propose the ApproxRank algorithm to estimate scores for the subgraph. Both IdealRank and ApproxRank represent the set of external pages with an external node L1 and extend the subgraph with links to L1. They also modify the PageRank-style transition matrix with respect to L1. We analyze the L1 distance between IdealRank scores and ApproxRank scores of the subgraph and show that it is within a constant factor of the L1 distance of the external pages (e.g., the true PageRank scores and uniform scores assumed by ApproxRank). We compare ApproxRank and a stochastic complementation approach (SC), a current best solution for this problem, on different types of subgraphs. ApproxRank has similar or superior performance to SC and typically improves on the runtime performance of SC by an order of magnitude or better. We demonstrate that ApproxRank provides a good approximation to PageRank for a variety of subgraphs.},
+	urldate = {2025-04-04},
+	booktitle = {2009 {IEEE} 25th {International} {Conference} on {Data} {Engineering}},
+	author = {Wu, Yao and Raschid, Louiqa},
+	month = mar,
+	year = {2009},
+	note = {ISSN: 2375-026X},
+	keywords = {Application software, Computer applications, Crawlers, Data engineering, Educational institutions, Explosions, Runtime, Search engines, Stochastic processes, Web pages},
+	pages = {54--65},
+}
+
+@article{breyer_markovian_nodate,
+	title = {{MARKOVIAN} {PAGE} {RANKING} {DISTRIBUTIONS}: {SOME} {THEORY} {AND} {SIMULATIONS}},
+	abstract = {We discuss some simple theoretical properties of web page ranking distributions, including PageRank (Brin and Page, 1998), which are based on uniformly ergodic Markov chains. We also propose a modiﬁcation of PageRank whith reduces the bias for older documents, and discuss details of our simulation programs.},
+	language = {en},
+	author = {Breyer, L A},
+}
+
+@article{avrachenkov_monte_2007,
+	title = {Monte {Carlo} {Methods} in {Pagerank} {Computation}: {When} {One} {Iteration} {Is} {Sufficient}},
+	volume = {45},
+	issn = {0036-1429},
+	shorttitle = {Monte {Carlo} {Methods} in {Pagerank} {Computation}},
+	url = {https://www.jstor.org/stable/40232890},
+	abstract = {PageRank is one of the principle criteria according to which Google ranks Web pages. PageRank can be interpreted as a frequency of visiting a Web page by a random surfer, and thus it reflects the popularity of a Web page. Google computes the PageRank using the power iteration method, which requires about one week of intensive computations. In the present work we propose and analyze Monte Carlo-type methods for the PageRank computation. There are several advantages of the probabilistic Monte Carlo methods over the deterministic power iteration method: Monte Carlo methods already provide good estimation of the PageRank for relatively important pages after one iteration; Monte Carlo methods have natural parallel implementation; and finally, Monte Carlo methods allow one to perform continuous update of the PageRank as the structure of the Web changes.},
+	number = {2},
+	urldate = {2025-04-04},
+	journal = {SIAM Journal on Numerical Analysis},
+	author = {Avrachenkov, K. and Litvak, N. and Nemirovsky, D. and Osipova, N.},
+	year = {2007},
+	note = {Publisher: Society for Industrial and Applied Mathematics},
+	pages = {890--904},
+}
+
+@article{noauthor_pdf_2024,
+	title = {({PDF}) {Monte} {Carlo} {Methods} in {PageRank} {Computation}: {When} {One} {Iteration} is {Sufficient}},
+	shorttitle = {({PDF}) {Monte} {Carlo} {Methods} in {PageRank} {Computation}},
+	url = {https://www.researchgate.net/publication/220179809_Monte_Carlo_Methods_in_PageRank_Computation_When_One_Iteration_is_Sufficient},
+	doi = {10.1137/050643799},
+	abstract = {PDF {\textbar} PageRank is one of the principle criteria according to which Google ranks Web pages. PageRank can be interpreted as a frequency of vis-iting a Web... {\textbar} Find, read and cite all the research you need on ResearchGate},
+	language = {en},
+	urldate = {2025-04-04},
+	journal = {ResearchGate},
+	month = oct,
+	year = {2024},
+}
+
+@article{anikin_efficient_2022,
+	title = {Efficient {Numerical} {Methods} to {Solve} {Sparse} {Linear} {Equations} with {Application} to {PageRank}},
+	volume = {37},
+	issn = {1055-6788, 1029-4937},
+	url = {http://arxiv.org/abs/1508.07607},
+	doi = {10.1080/10556788.2020.1858297},
+	abstract = {In this paper, we propose three methods to solve the PageRank problem for the transition matrices with both row and column sparsity. Our methods reduce the PageRank problem to the convex optimization problem over the simplex. The first algorithm is based on the gradient descent in L1 norm instead of the Euclidean one. The second algorithm extends the Frank-Wolfe to support sparse gradient updates. The third algorithm stands for the mirror descent algorithm with a randomized projection. We proof converges rates for these methods for sparse problems as well as numerical experiments support their effectiveness.},
+	number = {3},
+	urldate = {2025-04-03},
+	journal = {Optimization Methods and Software},
+	author = {Anikin, Anton and Gasnikov, Alexander and Gornov, Alexander and Kamzolov, Dmitry and Maximov, Yury and Nesterov, Yurii},
+	month = may,
+	year = {2022},
+	note = {arXiv:1508.07607 [math]},
+	keywords = {Mathematics - Optimization and Control},
+	pages = {907--935},
+}
+
 @article{xie_parameterized_2023,
 	title = {A {Parameterized} {Multi}-{Splitting} {Iterative} {Method} for {Solving} the {PageRank} {Problem}},
 	volume = {11},
@@ -125,7 +229,7 @@ Publisher: Schloss Dagstuhl – Leibniz-Zentrum für Informatik},
 	doi = {10.20944/preprints202306.1917.v1},
 }
 
-@article{anikin_efficient_2022,
+@article{anikin_efficient_2022-1,
 	title = {Efficient {Numerical} {Methods} to {Solve} {Sparse} {Linear} {Equations} with {Application} to {PageRank}},
 	volume = {37},
 	issn = {1055-6788, 1029-4937},
