--- a/main.tex
+++ b/main.tex
@@ -24,7 +24,7 @@
 \begin{multicols}{2}
 
 \section{Introduction}
-Today graphs are widely used to represent relationships between different entities for many applications such as social networks and website connections \cite{zhang_distributed_2021}. Therefor many specialized graph processing frameworks and algorithms have been introduced \cite{meng_survey_2024}. These systems can efficiently execute iterative algorithms such as PageRank \cite{gonzalez_graphx_nodate}. Apache Spark is an open-source distributed dataflow system that enables large-scale data processing \cite{shanahan_large_2015}. Built on top of Spark, GraphX is a graph processing framework that bridges the gap between system-level optimizations in specialized graph engines and the flexible dataflow operations available in general-purpose systems \cite{gonzalez_graphx_nodate}. However, recent research addresses the huge computational overhead in GraphX's PageRank algorithm and proposes approximate computing to reduce memory usage \cite{wu_efficient_2024}. 
+Today graphs are widely used to represent relationships between different entities for many applications such as social networks and website connections \cite{zhang_distributed_2021}. Therefor many specialized graph processing frameworks and algorithms have been introduced \cite{meng_survey_2024}. These systems can efficiently execute iterative algorithms such as PageRank \cite{gonzalez_graphx_nodate}. Apache Spark is an open-source distributed dataflow system that enables large-scale data processing \cite{shanahan_large_2015}. Built on top of Spark, GraphX is a graph processing framework that bridges the gap between system-level optimizations in specialized graph engines and the flexible dataflow operations available in general-purpose systems \cite{noauthor_software_nodate}\cite{gonzalez_graphx_nodate}. However, recent research addresses the huge computational overhead in GraphX's PageRank algorithm and proposes approximate computing to reduce memory usage \cite{wu_efficient_2024}. 
  
 
 \section{Problem Description}
@@ -37,20 +37,19 @@ PageRank is a broadly used graph algorithm introduced by Google. Many domains su
 
 
 \section{State of the Art}
-Today there are many approximate PageRank algorithms that address the computational overhead in the original implementation \cite{wu_efficient_2024}. They use different approaches to achieve a better performance. Some of them use iteration algorithms that work by updating the ranks step by step until the values stop changing much \cite{xie_parameterized_2023}\cite{anikin_efficient_2022}. Although there is a threshold it takes a lot of time on large graphs. Monte Carlo based algorithms use random walks instead of iterations, which means they simulate someone randomly clicking links on the graph to estimate the importance of nodes. For large graphs and high accuracy the algorithm requires a lot of these walks. Another approach only takes samples instead of the whole graph. It estimates the importance of a node by it's local area. In general they are faster because they only use local information but the runtime depends on the size of the area. However, the PageRank can only be estimated for nodes inside that area so computing the PageRank for the whole graph is not possible with the sampling method. Finally matrix approximation PageRank algorithms simplify the adjacency matrix by reducing the rank of the matrix to make computations easier. This results in faster computing time but usually the construction of low-rank matrices is high. Recent research addresses the problem and further optimizes the performance and accuracy by sampling substructures in the graph that are informative about node importance. It further simplifies the computation by constructing a low-rank approximation of the PageRank matrix using representative columns and rows \cite{wu_efficient_2024}. 
-
-Apache Spark introduced GraphX in 2014 which features a static and dynamic implementation of the PageRank algorithm. While GraphX was a huge step forward in distributed graph processing, it has several limitations. Since PageRank has been part of GraphX's first release and GraphX is not actively maintained it has not had any major updates since then. Therefor the PageRank algorithm in Spark is often not suitable for practical modern use cases. Especially, memory limitations arising from the use of power iterations and the use of RDD-based message passing become significant performance bottlenecks \cite{xin_graphx_2013}.
+Today there are many approximate PageRank implementations that address the computational overhead in the original implementation \cite{wu_efficient_2024}. They use different approaches to achieve a better performance. Some of them use iteration algorithms that work by updating the ranks step by step until the values stop changing much \cite{xie_parameterized_2023}\cite{anikin_efficient_2022}. Although there is a threshold it takes a significant amount of time on large scale graphs to converge \cite{wu_efficient_2024}. Monte Carlo based algorithms use random walks instead of iterations, which means they simulate someone randomly clicking links on the graph to estimate the importance of nodes . For large graphs and high accuracy the algorithm requires a lot of these walks \cite{breyer_markovian_nodate}\cite{noauthor_pdf_2024}. Another approach only takes samples instead of the whole graph. It estimates the importance of a node by it's local area. In general they are faster because they only use local information but the runtime depends on the size of the area. However, the PageRank can only be estimated for nodes inside that area so computing the PageRank for the whole graph is not possible with the sampling method \cite{wu_approxrank_2009}\cite{noauthor_local_nodate}. Finally matrix approximation PageRank algorithms simplify the adjacency matrix by reducing the rank of the matrix to make computations easier. This results in faster computing time but usually the construction of low-rank matrices is high \cite{noauthor_fast_nodate}. Recent research addresses the problem and further optimizes the performance and accuracy by sampling substructures in the graph that are informative about node importance. It further simplifies the computation by constructing a low-rank approximation of the PageRank matrix using representative columns and rows \cite{wu_efficient_2024}. \\Apache Spark introduced GraphX in 2014 which features a static and dynamic implementation of the PageRank algorithm \cite{noauthor_graphx_nodate}. While GraphX was a huge step forward in distributed graph processing \cite{gonzalez_graphx_nodate}, it has several limitations. %Since PageRank has been part of GraphX's first release and GraphX is not actively developed, it has not had any major updates since then.
+Especially, memory limitations arising from the use of power iterations \cite{page_pagerank_1999} and the use of RDD-based message passing become significant performance bottlenecks \cite{xin_graphx_2014}\cite{xin_graphx_2013}.
  
 
 \section{Approach}
-The novel approach of the paper will be to implement an approximate PageRank algorithm on the open source system Apache Spark. As the existing GraphX library is not sufficient for real world use cases but poses a practical framework for many companies, the new implementation should address these issues and introduce an approach that focuses on low memory consumption. 
-The result of recent research shows that there are several algorithms that perform better than the original one, but have not been implemented in an open source framework. The main goal of the thesis is to implement a state of the art method on the basis of Apache Spark that requires significantly less memory than GraphX's implementation. 
+The novel approach of the thesis will be to implement an approximate PageRank algorithm on the open source system Apache Spark. As the existing GraphX library is not sufficient for real world use cases but poses a practical framework for many companies, the new implementation should address these issues and introduce an approach that focuses on low memory consumption. 
+The result of recent research shows that there are several algorithms that perform better than the original one \cite{wu_efficient_2024}, but have not been implemented in an general use framework. The main goal of the thesis is to implement a state of the art method on the basis of Apache Spark that requires less memory than GraphX's PageRank implementation. 
 
-One idea is the $T^2$-Approx algorithm. It is a new method that addresses issues in existing algorithms and generalizes other matrix approximation-based PageRank algorithms. It uses a modified low-rank approximation of $T^2$, where $T$ is the transition matrix of the graph. It directly approximates $T^2$ by using two much smaller matrices $X$ and $Y$ instead of approximating $T$ and then computing $T^k$. It then estimates $T^k$ by building up powers of the small matrix. In general it uses low-rank approximation so that only a small number of rows and columns are used which drastically reduces memory. Since the PageRank algorithm doesn't always require exact values, this method is very helpful to reduce computational overhead.
+One idea is the $T^2$-Approx algorithm \cite{wu_efficient_2024}. It is a new method that addresses issues in existing algorithms and generalizes other matrix approximation-based PageRank algorithms. It uses a modified low-rank approximation of $T^2$, where $T$ is the transition matrix of the graph. It directly approximates $T^2$ by using two much smaller matrices $X$ and $Y$ instead of approximating $T$ and then computing $T^k$. It then estimates $T^k$ by building up powers of the small matrix. In general it uses low-rank approximation so that only a small number of rows and columns are used which drastically reduces memory. Since the PageRank algorithm tolerates approximate values, this method is an effective way to reduce computational overhead.
 
-Another algorithm that implements a more efficient version of PageRank is the CUR-Trans algorithm. It is based on a modified CUR decomposition, which is applied to to the transition matrix. The algorithm splits the large matrix $T$ into three small matrices $C, \tilde{U}$ and $R$, where $C$ and $R$ are sampled columns and rows and $\tilde{U}$ is a low-rank approximation of the intersection of $C$ and $R$. Then a new Graph is constructed with the matrices above that is much smaller than the original one. Finally PageRank is running on the smaller graph and the results are transformed back to the original graph.
+Another algorithm that implements a more efficient version of PageRank is the CUR-Trans algorithm \cite{wu_efficient_2024}. It is based on a modified CUR decomposition, which is applied to to the transition matrix. The algorithm splits the large matrix $T$ into three small matrices $C, \tilde{U}$ and $R$, where $C$ and $R$ are sampled columns and rows and $\tilde{U}$ is a low-rank approximation of the intersection of $C$ and $R$. Then a new Graph is constructed with the matrices above that is much smaller than the original one. Finally PageRank is running on the smaller graph and the results are transformed back to the original graph.
 
-After the implementation of a state of the art approach, the setup will be evaluated. As this paper tries to address the issue of inefficiency in GraphX's PageRank implementation, the primary evaluation metric will be memory usage. A tradeoff in accuracy is considered acceptable. The original GraphX's PageRank ialgorithm will serve as a baseline for comparison.
+After the implementation of a state of the art approach, the setup will be evaluated. As this thesis aims to address the inefficiencies in GraphX's PageRank implementation, the primary evaluation metric will be memory usage. A tradeoff in accuracy is considered acceptable. The original GraphX's PageRank ialgorithm will serve as a baseline for comparison.
 
 
 
