updated version until evaluation part

--- a/references.bib
+++ b/references.bib
@@ -1,4 +1,69 @@
 
+@article{noauthor_pdf_2024,
+	title = {({PDF}) {Fast} {PageRank} {Computation} via a {Sparse} {Linear} {System}},
+	issn = {1542-7951},
+	url = {https://www.researchgate.net/publication/38339085_Fast_PageRank_Computation_via_a_Sparse_Linear_System},
+	abstract = {PDF {\textbar} Recently, the research community has devoted increased attention to reducing the computational time needed by web ranking algorithms. In... {\textbar} Find, read and cite all the research you need on ResearchGate},
+	language = {en},
+	urldate = {2025-04-07},
+	journal = {ResearchGate},
+	month = dec,
+	year = {2024},
+}
+
+@article{noauthor_pdf_2024-1,
+	title = {({PDF}) {Fast} {PageRank} {Computation} via a {Sparse} {Linear} {System}},
+	issn = {1542-7951},
+	url = {https://www.researchgate.net/publication/38339085_Fast_PageRank_Computation_via_a_Sparse_Linear_System},
+	abstract = {PDF {\textbar} Recently, the research community has devoted increased attention to reducing the computational time needed by web ranking algorithms. In... {\textbar} Find, read and cite all the research you need on ResearchGate},
+	language = {en},
+	urldate = {2025-04-07},
+	journal = {ResearchGate},
+	month = dec,
+	year = {2024},
+}
+
+@inproceedings{tian_towards_2017,
+	title = {Towards memory and computation efficient graph processing on spark},
+	url = {https://ieeexplore.ieee.org/document/8257948},
+	doi = {10.1109/BigData.2017.8257948},
+	abstract = {Algorithms for large scale natural graph processing can be categorized into two types based on their value propagation behaviors: the unidirectional value propagation (UVP) algorithms and the bidirectional value propagation (BVP) algorithms. The behavior about how vertices interact with neighbors also differs between two algorithm types, which demands different system design choices. However, current distributed graph processing systems usually try to support both types in one general-purpose framework Such system design can not promise good performance and low resource consumption for both types. Especially, for UVP algorithms, current systems can not guarantee low memory footprint, computation efficiency and communication efficiency at the same time. In this paper, we propose a new graph processing engine on Spark, GraphV, which is specially designed for the unidirectional value propagation algorithms, and can satisfy all the above requirements for this type of algorithms. To retain the generalization for other algorithms, we also build a dual-engine framework by integrating GraphV with Spark's existing graph processing engine GraphX. The main design choices of GraphV include a cheap propagation-related partitioner, an one-step computation model, and a locality-aware local graph layout. According to the experiment results, GraphV is faster than GraphX by the factors of 1.2x-3.1x, with much less resource consumption. The source code of GraphV will be publicly available from http://prof.ict.ac.cn/GraphV.},
+	urldate = {2025-04-07},
+	booktitle = {2017 {IEEE} {International} {Conference} on {Big} {Data} ({Big} {Data})},
+	author = {Tian, Xinhui and Guo, Yuanqing and Zhan, Jianfeng and Wang, Lei},
+	month = dec,
+	year = {2017},
+	keywords = {Algorithm design and analysis, Computational modeling, Engines, Mirrors, Partitioning algorithms, Spark, Sparks, Synchronization, big graph, distributed system},
+	pages = {375--382},
+}
+
+@inproceedings{bhattacharya_comparative_2024,
+	title = {Comparative {Study} of {Large} {Graph} {Processing} {Systems}},
+	url = {https://ieeexplore.ieee.org/document/10914110},
+	doi = {10.1109/CALCON63337.2024.10914110},
+	abstract = {In the modern world, all real-life problems, such as road networks, telecommunication networks, recommendation systems, social network interactions and so on can be modeled using Graph Data Structure. Over time, the data accumulates for each of these, and as a result, the size of the graph also increases. The large graphs highlight some constraints of the computational systems with respect to processing speed, accuracy, and memory usage. In the last few decades, there have been extensive research and results on optimizing large graph processing for efficient storage and quicker results. This paper provides an extensive comparative survey of the state-of-the-art centralised and distributed approaches that are utilised for large graph processing with respect to processing speed and resource utilization on both on-premise as well as cloud architecture. There is focus on both theoretical as well empirical analysis, highlighting some of the applications of existing large graph processing systems as well. This paper also provides a taxonomy of the large graph processing frameworks/tools covering all popular and relevant categories and sub-categories.},
+	urldate = {2025-04-07},
+	booktitle = {2024 {IEEE} {Calcutta} {Conference} ({CALCON})},
+	author = {Bhattacharya, Subhayan and Ghosal, Rohit and Roy, Sarbani},
+	month = dec,
+	year = {2024},
+	keywords = {Cloud Computing, Cloud computing, Data models, Data structures, Distributed Computing, Large Graph Processing, Recommender systems, Resource management, Roads, Social networking (online), Stress, Surveys, Taxonomy},
+	pages = {1--6},
+}
+
+@misc{page_pagerank_1999,
+	type = {Techreport},
+	title = {The {PageRank} {Citation} {Ranking}: {Bringing} {Order} to the {Web}.},
+	shorttitle = {The {PageRank} {Citation} {Ranking}},
+	url = {http://ilpubs.stanford.edu:8090/422/?utm_campaign=Technical%20SEO%20Weekly&utm_medium=email&utm_source=Revue%20newsletter},
+	abstract = {The importance of a Web page is an inherently subjective matter, which depends on the readers interests, knowledge and attitudes. But there is still much that can be said objectively about the relative importance of Web pages. This paper describes PageRank, a mathod for rating Web pages objectively and mechanically, effectively measuring the human interest and attention devoted to them. We compare PageRank to an idealized random Web surfer. We show how to efficiently compute PageRank for large numbers of pages. And, we show how to apply PageRank to search and to user navigation.},
+	urldate = {2025-04-04},
+	author = {Page, Lawrence and Brin, Sergey and Motwani, Rajeev and Winograd, Terry},
+	month = nov,
+	year = {1999},
+	note = {Publisher: Stanford InfoLab},
+}
+
 @article{zhu_gemini_nodate,
 	title = {Gemini: {A} {Computation}-{Centric} {Distributed} {Graph} {Processing} {System}},
 	abstract = {Traditionally distributed graph processing systems have largely focused on scalability through the optimizations of inter-node communication and load balance. However, they often deliver unsatisfactory overall processing efﬁciency compared with shared-memory graph computing frameworks. We analyze the behavior of several graph-parallel systems and ﬁnd that the added overhead for achieving scalability becomes a major limiting factor for efﬁciency, especially with modern multi-core processors and high-speed interconnection networks.},
@@ -72,7 +137,7 @@
 	pages = {890--904},
 }
 
-@article{noauthor_pdf_2024,
+@article{noauthor_pdf_2024-2,
 	title = {({PDF}) {Monte} {Carlo} {Methods} in {PageRank} {Computation}: {When} {One} {Iteration} is {Sufficient}},
 	shorttitle = {({PDF}) {Monte} {Carlo} {Methods} in {PageRank} {Computation}},
 	url = {https://www.researchgate.net/publication/220179809_Monte_Carlo_Methods_in_PageRank_Computation_When_One_Iteration_is_Sufficient},
